samples/_failures_safe/1761316184_80bca8_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_9bb7482e.c: In function ‘main’:
./samples/SAFE/__tmp_9bb7482e.c:182:9: error: ‘process’ undeclared (first use in this function)
  182 |         process
      |         ^~~~~~~
./samples/SAFE/__tmp_9bb7482e.c:182:9: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_9bb7482e.c:182:16: error: expected ‘;’ at end of input
  182 |         process
      |                ^
      |                ;
./samples/SAFE/__tmp_9bb7482e.c:182:9: error: expected declaration or statement at end of input
  182 |         process
      |         ^~~~~~~
./samples/SAFE/__tmp_9bb7482e.c:182:9: error: expected declaration or statement at end of input
